--- a/lor.config
+++ b/lor.config
@@ -13,11 +13,11 @@ train:
   save_checkpoints_steps: 1000
   # (optional) How many checkpoints to keep on disk.
   keep_checkpoint_max: 5
+  max_step: 100000
+
 
 
 # Model and optimization parameters.
-params:
-    decoding_subword_token: ▁
 params:
   decoding_subword_token: ▁
   decoding_noise:
@@ -27,7 +27,7 @@ params:
 
     # (optional) Replace unknown target tokens by the original source token with the
     # highest attention (default: false).
-#  replace_unknown_target: false
+  replace_unknown_target: true
 
 
 infer:
